[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "not-your-moms-osint"
version = "0.1.0"
description = "Not-your-mom's-OSINT CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
]

[project.scripts]
osint = "osint.__main__:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
