[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "not-your-moms-osint"
version = "0.1.0"
description = "Not-your-mom's-OSINT CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.0",
  "requests>=2.31.0",
  "requests-futures>=1.0.2",
  "sherlock-project>=0.15.0",
  "networkx>=3.0",
  "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[project.scripts]
osint = "osint.cli.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
